--- a/client/strength-bros/public/index.html
+++ b/client/strength-bros/public/index.html
@@ -38,5 +38,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <p id="acc-x">X: </p>
+    <p id="y">Y: </p>
+    <p id="z">Z: </p>
+    <script src="./accelerometer.js"></script>
   </body>
 </html>
